			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * PORT/CLEANUP: Various issues around setenv/2 and unsetenv/1.  Richard
    O'Keefe.

  * FIXED: proper error signalling in rdiv/2 on division-by-zero.  Mike
    Elston.

  * MODIFIED: new AVL implementation of library(assoc) from work by various
    authors, merged and documented by Markus Triska.  The argument order of
    gen_assoc/3 has been modified from the original DEC10 library 
    for compatibility woth Quintus and SICStus.

  * ENHANCED: Try to be more clever finding a browser. Jochem Liem.

  * FIXED: arg/3 documentation.  Markus Triska.

=================================
VERSION 5.6.4 (February 12, 2006)
=================================

  * FIXED: copy_term_nat/2 deleted attributes from term being copied.
    Leslie de Koninck.

  * MODIFIED: Added byte-position to stream-position terms.  This means
    that code relying on $stream_position(Char,Line,LinePos) breaks. The
    new version provides stream_position_data/3 (compatible to SICStus)
    for extracting the field in a portable manner.

  * PORT: Pass main compiler CFLAGS using plld.  Richard O'Keefe.

  * PORT: Fixed paths when using install-sh.  Richard O'Keefe.

  * ENHANCED: translation of t --> [a,b], ....  Richard O'Keefe.

  * FIXED: Bug#140: Various DESTDIR issues when installing the PDF
    documentation. Keri Harris.

  * ADDED: \uXXXX and \UXXXXXXXX syntax support and various enhancements
    in read and write as well as the documentation of escape sequences.
    Richard O'Keefe.

  * Make test suite skip Unicode filename and character classification
    tests in non-unicode environments. 

  * FIXED: Allow for ISO :- dynamic([a/1, b/2]).   Roger Scowen.
